# worth-weave

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  macos-release.yml
docs/: architecture.md  data-imports.md  open-source-readiness.md  release.md  roadmap.md  security.md
frontend/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: AboutDialog.tsx  AiSetup.tsx  App.test.tsx  App.tsx  CurrencySetup.tsx  ImportDialog.tsx  InsightsCard.tsx  MarketDataDialog.tsx  ReportingViews.tsx  SearchSelect.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx  api.ts  fonts.css  main.tsx  styles.css  test-setup.ts
frontend/tests/: onboarding.spec.ts
migrations/: env.py
migrations/versions/: 20260711_0001_initial_ledger.py
scripts/: build-demo.sh  check-release.sh  create-updater-manifest.mjs  extract-release-notes.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.demo.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: THIRD_PARTY_NOTICES.md  corporate-actions.json
src-tauri/src/: ai.rs  backup.rs  brokers.rs  db.rs  demo.rs  error.rs  imports.rs  lib.rs  main.rs  market.rs  models.rs  projections.rs
src/ledgerly/: __init__.py  config.py
src/ledgerly/api/: main.py  routes.py
src/ledgerly/domain/: __init__.py  models.py
src/ledgerly/importers/: __init__.py  base.py  common.py  ibkr.py  trading212.py
src/ledgerly/persistence/: __init__.py  database.py  tables.py
src/ledgerly/services/: imports.py
tests/: conftest.py  test_api.py  test_config.py  test_domain_models.py  test_import_service.py  test_importers.py
