[project]
name = "ledgerly"
version = "0.1.0"
description = "Local-first deterministic investment portfolio ledger"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic",
  "fastapi",
  "pydantic-settings",
  "sqlalchemy",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "httpx2",
  "hypothesis",
  "mypy",
  "pip-audit",
  "pytest",
  "pytest-cov",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgerly"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["ledgerly"]

[tool.coverage.run]
branch = true
source = ["ledgerly"]

[tool.coverage.report]
fail_under = 85
show_missing = true
