[package]
name = "worthweave"
version = "0.1.0"
description = "Private local-first investment portfolio"
authors = ["Worthweave contributors"]
edition = "2024"
rust-version = "1.97"

[lib]
name = "worthweave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
rusqlite = { version = "0.40.1", features = ["bundled", "uuid"] }
rust_decimal = { version = "1.42.1", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
