[package]
name = "worthweave"
version = "0.1.1"
description = "Private local-first investment portfolio"
authors = ["Worthweave contributors"]
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/kabudu/worth-weave"
homepage = "https://github.com/kabudu/worth-weave"
readme = "../README.md"

[lib]
name = "worthweave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
age = "0.11.3"
chrono = { version = "0.4.45", features = ["serde"] }
csv = "1.4.0"
rusqlite = { version = "0.40.1", features = ["backup", "bundled", "uuid"] }
futures-util = "0.3.32"
keyring = "4.1.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
quick-xml = "0.41.0"
rust_decimal = { version = "1.42.1", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.18"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["time"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
